--- a/src/praw.ini
+++ b/src/praw.ini
@@ -4,3 +4,9 @@ client_secret=
 user_agent=Personal Rocket League Reddit Posting Bot v0.9
 username=
 password=
+
+
+[unauthenticated_bot]
+client_id=
+client_secret=
+user_agent=Personal Rocket League Reddit Posting Bot v0.9
